kubernetes/k8s-iq-pg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nxiq-pg-deployment
  labels:
    app: nxiq-pg
spec:
  minReadySeconds: 180
  replicas: 1
  selector:
    matchLabels:
      app: nxiq-pg
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nxiq-pg
    spec:
      terminationGracePeriodSeconds: 120
      dnsPolicy: Default
      # NOTE: Without initContainers, it fails to start on Docker-Desktop
      containers:
        - name: nxiq-pg-pod
          securityContext:
            runAsUser: ${_RUNAS_USR:-1000}
          image: "sonatype/nexus-iq-server:${_TAG:-latest}"
          imagePullPolicy: IfNotPresent
          #resources:
          #  requests:
          #    # Make sure blow works with JAVA_OPTS
          #    cpu: "2"
          #    memory: "2G"
          ports:
            - containerPort: 8070
            - containerPort: 8071
          livenessProbe:
            httpGet:
              #host: ${_METALLB_IP}
              path: /ping
              port: 8070
            initialDelaySeconds: 30
            periodSeconds: 120
            successThreshold: 1
            failureThreshold: 6
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8070
            initialDelaySeconds: 30
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 6
            timeoutSeconds: 10
          volumeMounts:
            - name: sonatype-license-volume
              mountPath: /etc/sonatype
            - name: nxiq-pg-conf-volume
              mountPath: /etc/nexus-iq-server
            - name: nxiq-pg-work-volume
              mountPath: /sonatype-work
      volumes:
        #kubectl -n sonatype create secret generic sonatype-license --from-file /path/to/licenseFile
        - name: sonatype-license-volume
          secret:
            secretName: sonatype-license
        - name: nxiq-pg-conf-volume
          configMap:
            name: nxiq-pg-conf
            items:
              - key: config.yml
                path: config.yml
        - name: nxiq-pg-work-volume
          hostPath:
            path: ${_SONATYPE_WORK%/}
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: nxiq-pg-service
  labels:
    app: nxiq-pg
spec:
  type: NodePort
  # For MetalLB
  #type: LoadBalancer
  #loadBalancerIP: ${_METALLB_IP}
  selector:
    app: nxiq-pg
  ports:
    - name: nxiq-web-ui
      protocol: TCP
      port: 8070
      targetPort: 8070
