kubernetes/k8s-nxrm3-pg-ha.yaml
# DEPRECATED: Ingress for manual HA. Now using Helm chart for HA so using k8s-nexus-helmha-ingress.yml

# NOTE:
#   This script uses the node's hostPath for sharing blobs, instead of the recommended NFS.
#
# LIMITATION:
#   Can't (or need to be careful) use special characters such as double-quotes and dollar mark.
#
# COMMAND EXAMPLE:    TODO: &currentSchema=${_DB_SCHEMA:-"public"}
#   cd ~/IdeaProjects/samples/kubernetes
#   # Below _DNS is only for my k8s env (don't forget to update /etc/banner_add_hosts). _DB_USER can't contain '-' character.
#   export _NAMESPACE="sonatype-ha" _ID="nxrm3ha" _DNS="192.168.4.31" _DB_HOST_PORT="192.168.4.31:5432" #_TAG="3.53.1" _METALLB_IP="192.168.4.230"
#   export _BLOBS_PATH="/var/tmp/share/sonatype/${_ID}/blobs" _JDBC_URL="jdbc:postgresql://${_DB_HOST_PORT}/${_ID}?gssEncMode=disable" _DB_USER="${_ID}" _DB_PWD="${_ID}"
#
# ONE TIME ONLY preparation (*after* above "export")
#  - On *K8s node*, which will be used for blob stores:
#     mkdir -v -p -m 777 ${_BLOBS_PATH}
#  - With psql, create DB user and database:
#     #source ../bash/utils.sh && source ../bash/utils_db.sh && _postgresql_create_dbuser "${_ID}"
#     sudo -u postgres -i psql -c "CREATE USER ${_DB_USER} WITH LOGIN PASSWORD '${_DB_PWD}';"
#     sudo -u postgres -i psql -c "CREATE DATABASE ${_ID} WITH OWNER ${_DB_USER} ENCODING 'UTF8';"
#     # *ALSO*, don't forget updating pg_hba.conf
#  - Create a namespace:
#     kubectl create namespace ${_NAMESPACE}
#  - Create a secret for the license file:
#     kubectl -n ${_NAMESPACE} create secret generic sonatype-license --from-file sonatype-license.lic=/var/tmp/share/sonatype/sonatype-license.lic
#  - Configure tls secret for Ingress
#     kubectl -n ${_NAMESPACE} create secret tls nexus-tls --key ~/IdeaProjects/samples/misc/standalone.localdomain.key --cert ~/IdeaProjects/samples/misc/standalone.localdomain.crt
#   - Create a secret for JDBC
#   #kubectl -n ${_NAMESPACE} delete secret ${_ID}-jdbc
#   kubectl -n ${_NAMESPACE} create secret generic ${_ID}-jdbc --from-literal=db_user="${_DB_USER}" --from-literal=db_pwd="${_DB_PWD}" --from-literal=jdbc_url="${_JDBC_URL}"
#
#   eval "echo \"$(cat ./k8s-nxrm3-pg-ha.yaml | grep -v '^\s*#')\"" > ./${_ID}.yaml
#   #kubectl -n ${_NAMESPACE} delete -f ./${_ID}.yaml   # NOTE: This deletes PVC as well
#   kubectl -n ${_NAMESPACE} apply -f ./${_ID}.yaml
#
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${_ID}-statefulset
  labels:
    app: ${_ID}
spec:
  serviceName: ${_ID}-statefulset-sn
  replicas: 1
  selector:
    matchLabels:
      app: ${_ID}
  template:
    metadata:
      labels:
        app: ${_ID}
    spec:
      #serviceAccountName: ${_ID}-statefulset-sa
      terminationGracePeriodSeconds: 60
      dnsPolicy: Default
      # NOTE: Without initContainers, it fails to start on Docker-Desktop
      containers:
        - name: ${_ID}-pod
          securityContext:
            runAsUser: ${_RUNAS_USR:-200}
          image: sonatype/nexus3:${_TAG:-latest}
          #imagePullPolicy: IfNotPresent
          resources:
            requests:
              # Make sure blow works with INSTALL4J_ADD_VM_PARAMS
              cpu: '1'
              memory: '3G'
          ports:
            - containerPort: 8081
            #- containerPort: 8443
            - containerPort: 4999
            #- containerPort: 5000
          startupProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 120
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
            timeoutSeconds: 10
          livenessProbe:
            # Probably httpGet is better, but I don't want to see many lines in request.log
            tcpSocket:
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 10
          volumeMounts:
            - name: sonatype-license-volume
              mountPath: /etc/sonatype
              readOnly: true
            - name: nexus-data-volume
              mountPath: /nexus-data
            - name: nexus-blobs-volume
              mountPath: /nexus-data/blobs
      volumes:
        #kubectl -n sonatype create secret generic sonatype-license --from-file /path/to/licenseFile
        - name: sonatype-license-volume
          secret:
            secretName: sonatype-license
        - name: nexus-blobs-volume
          hostPath: # TODO: this should be NFS
            path: ${_BLOBS_PATH%/}
            type: DirectoryOrCreate
  volumeClaimTemplates:
    - metadata:
        name: nexus-data-volume
      spec:
        accessModes: [ 'ReadWriteOnce' ]
        #storageClassName: 'standard'
        resources:
          requests:
            storage: 4Gi  #20Gi
---
apiVersion: v1
kind: Service
metadata:
  name: ${_ID}-service
  labels:
    app: ${_ID}
spec:
  type: NodePort
  # For MetalLB
  #type: LoadBalancer
  #loadBalancerIP: ${_METALLB_IP}
  selector:
    app: ${_ID}
  ports:
    - name: nexus-webui-http
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: nexus-docker-http
      protocol: TCP
      port: 4999
      targetPort: 4999
