kubernetes/k8s-nxrm3-pg.yaml
# NOTE:
#   This script uses the node's hostPath for sharing blobs, instead of the recommended NFS.
#
# COMMAND EXAMPLE:
#   cd ~/IdeaProjects/samples/kubernetes
#   # Below _DNS is only for my k8s env (don't forget to update /etc/banner_add_hosts). _DB_USER can't contain '-' character.
#   export _NAMESPACE="sonatype" _ID="nxrm3pg"
#   export _RUNAS_USR=200 _DNS="192.168.1.31" _DB_HOST_PORT="192.168.1.31:5432" #_METALLB_IP="192.168.1.230"
#   export _BLOBS_PATH="/var/tmp/share/sonatype/${_ID}/blobs" _JDBC_URL="jdbc:postgresql://${_DB_HOST_PORT}/${_ID}?gssEncMode=disable" _DB_USER="${_ID}" _DB_PWD="${_ID}"
#
#  one time only preparation (*after* above "export")
#  - On *K8s node*, which will be used for blob stores:
#     mkdir -v -p -m 777 ${_BLOBS_PATH}
#  - With psql, create DB user and database:
#     #source ../bash/utils.sh && source ../bash/utils_db.sh && _postgresql_create_dbuser "${_ID}"
#     sudo -u postgres -i psql -c "CREATE USER ${_DB_USER} WITH LOGIN PASSWORD '${_DB_PWD}';"
#     sudo -u postgres -i psql -c "CREATE DATABASE ${_ID} WITH OWNER ${_DB_USER} ENCODING 'UTF8';"
#     # *ALSO*, don't forget updating pg_hba.conf
#  - Create a namespace:
#     kubectl create namespace ${_NAMESPACE}
#  - Create a secret for the license file:
#     kubectl -n ${_NAMESPACE} create secret generic sonatype-license --from-file sonatype-license.lic=/path/to/licenseFile
#  - Configure tls secret for Ingress
#     kubectl -n ${_NAMESPACE} create secret tls nexus-tls --key ~/IdeaProjects/samples/misc/standalone.localdomain.key --cert ~/IdeaProjects/samples/misc/standalone.localdomain.crt
#
#   # If DB username and password has been changed
#   #kubectl -n ${_NAMESPACE} delete secret ${_ID}-jdbc
#   #kubectl -n ${_NAMESPACE} create secret generic ${_ID}-jdbc --from-literal=db_user="${_DB_USER}" --from-literal=db_pwd="${_DB_PWD}" --from-literal=jdbc_url="${_JDBC_URL}"
#   eval "echo \"$(cat ./k8s-nxrm3-pg.yaml | grep -v '^\s*#')\"" > ./${_ID}.yaml
#   #kubectl -n ${_NAMESPACE} delete -f ./${_ID}.yaml   # NOTE: This deletes PVC as well
#   kubectl -n ${_NAMESPACE} apply -f ./${_ID}.yaml
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${_ID}-deployment
  labels:
    app: ${_ID}
spec:
  minReadySeconds: 180
  replicas: 1
  selector:
    matchLabels:
      app: ${_ID}
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ${_ID}
    spec:
      # Not Orient, so 1 minute would be plenty for single node
      terminationGracePeriodSeconds: 60
      dnsPolicy: Default
      # NOTE: Without initContainers, it fails to start on Docker-Desktop
      containers:
        - name: ${_ID}-pod
          securityContext:
            runAsUser: ${_RUNAS_USR:-200}
          image: sonatype/nexus3:${_TAG:-latest}
          # expecting "latest" uses 'imagePullPolicy: Always' automatically
          #imagePullPolicy: IfNotPresent
          resources:
            requests:
              # Make sure blow works with INSTALL4J_ADD_VM_PARAMS
              cpu: '1'
              memory: '4G'
          ports:
            - containerPort: 8081
            #- containerPort: 8443
            - containerPort: 4999
            #- containerPort: 5000
          startupProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 120
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
            timeoutSeconds: 10
          livenessProbe:
            # Probably httpGet is better, but I don't want to see many lines in request.log
            tcpSocket:
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 10
          volumeMounts:
            - name: sonatype-license-volume
              mountPath: /etc/sonatype
              readOnly: true
            - name: nexus-data-volume
              mountPath: /nexus-data
            - name: nexus-blobs-volume
              mountPath: /nexus-data/blobs
      volumes:
        #kubectl -n sonatype create secret generic sonatype-license --from-file /path/to/licenseFile
        - name: sonatype-license-volume
          secret:
            secretName: sonatype-license
        # No strong reason, but I feel NOT specifying own persistent volume for /nexus-data (and let k8s chose the underline file system) might be appropriate for the /nexus-data.
        - name: nexus-data-volume
          persistentVolumeClaim:
            claimName: ${_ID}-data-pvc
        - name: nexus-blobs-volume
          hostPath:
            path: ${_BLOBS_PATH%/}
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: ${_ID}-service
  labels:
    app: ${_ID}
spec:
  type: NodePort
  # For MetalLB
  #type: LoadBalancer
  #loadBalancerIP: ${_METALLB_IP}
  selector:
    app: ${_ID}
  ports:
    - name: nexus-webui-http
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: nexus-docker-http
      protocol: TCP
      port: 4999
      targetPort: 4999
