kubernetes/k8s-nexus-ha-ingress.yaml
# *** OLD ingress example used by manual HA deployment ***
#
# kubectl create secret tls nexus-tls -n sonatype-ha --key ~/IdeaProjects/samples/misc/standalone.localdomain.key --cert ~/IdeaProjects/samples/misc/standalone.localdomain.crt
# kubectl apply -n sonatype-ha -f ./k8s-nexus-ha-ingress.yaml
# To check: kubectl cp -n ingress nginx-ingress-microk8s-controller-22p79:/etc/nginx/nginx.conf ./ingress-nginx.conf

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nexusha-ingresscontroller
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexusha-ingress
  labels:
    app: nexusha
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "1023m"
    nginx.ingress.kubernetes.io/affinity: 'cookie'
    nginx.ingress.kubernetes.io/affinity-mode: 'persistent'  # or balanced
    nginx.ingress.kubernetes.io/session-cookie-name: 'NXJWT'
    nginx.ingress.kubernetes.io/session-cookie-expires: '1800'
    nginx.ingress.kubernetes.io/session-cookie-max-age: '1800'
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  # Using existing IngressClass
  #ingressClassName: nginx-ingress-microk8s
  tls:
    - hosts:
        - nxrm3ha-k8s.standalone.localdomain
        - nxiqha-k8s.standalone.localdomain
      secretName: nexus-tls
  rules:
    - host: nxrm3ha-k8s.standalone.localdomain
      http:
        paths:
          - path: /
            backend:
              service:
                name: nxrm3ha-service
                port:
                  number: 8081
            pathType: Prefix
    - host: nxrm3ha-docker-k8s.standalone.localdomain
      http:
        paths:
          - path: /
            backend:
              service:
                name: nxrm3ha-service
                port:
                  #number: 5000 # httpsPort
                  number: 4999 # httpPort
                  #number: 8081
            pathType: Prefix
    - host: nxiqha-k8s.standalone.localdomain
      http:
        paths:
          - path: /
            backend:
              service:
                name: nxiqha-iq-server-application-service
                port:
                  number: 8070
            pathType: Prefix
    - host: nxiqha-admin-k8s.standalone.localdomain
      http:
        paths:
          - path: /
            backend:
              service:
                name: nxiqha-iq-server-admin-service
                port:
                  number: 8071
            pathType: Prefix
