kubernetes/k8s-nexus-ingress.yml
# kubectl create secret tls nexus-tls -n sonatype --key ~/IdeaProjects/samples/misc/standalone.localdomain.key --cert ~/IdeaProjects/samples/misc/standalone.localdomain.crt
# kubectl apply -n sonatype -f ./k8s-nexus-ingress.yml
# To check: kubectl exec -n ingress nginx-ingress-microk8s-controller-tlg6c cat /etc/nginx.conf

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "1023m"
    #nginx.ingress.kubernetes.io/client-max-body-size: "1022m"
    #nginx.org/client-max-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    #nginx.ingress.kubernetes.io/rewrite-target: /repository/docker-group/v$1
spec:
  #ingressClassName: nginx-ingress-microk8s
  tls:
    - hosts:
        - nxrm3pg-k8s.standalone.localdomain
        - docker-k8s.standalone.localdomain
        - nxiq-k8s.standalone.localdomain
      secretName: nexus-tls
  rules:
    # NXRM3 + PostgreSQL standalone
    - host: nxrm3pg-k8s.standalone.localdomain
      http:
        paths:
          - path: /
            backend:
              service:
                name: nxrm3pg-service
                port:
                  number: 8081
            pathType: Prefix
    - host: docker-k8s.standalone.localdomain
      http:
        paths:
          - path: /
            backend:
              service:
                name: nxrm3pg-service
                port:
                  #number: 5000 # httpsPort
                  number: 4999 # httpPort
                  #number: 8081
            pathType: Prefix
    - host: docker-proxy.standalone.localdomain
      http:
        paths:
          - path: /
            backend:
              service:
                name: nxrm3pg-service
                port:
                  number: 8081
            pathType: Prefix
    - host: docker-hosted.standalone.localdomain
      http:
        paths:
          - path: /
            backend:
              service:
                name: nxrm3pg-service
                port:
                  number: 8081
            pathType: Prefix
    - host: docker-group.standalone.localdomain
      http:
        paths:
          - path: /
            backend:
              service:
                name: nxrm3pg-service
                port:
                  number: 8081
            pathType: Prefix

    # IQ
    - host: nxiq-k8s.standalone.localdomain
      http:
        paths:
          - path: /
            backend:
              service:
                name: nxiq-pg-service
                port:
                  number: 8070
            pathType: Prefix
    # NOTE: Do i need to expose this?
    - host: nxiq-admin-k8s.standalone.localdomain
      http:
        paths:
          - path: /
            backend:
              service:
                name: nxiq-pg-service
                port:
                  number: 8071
            pathType: Prefix
